MARWEB-127 Mobile-friendly responsive design fixed bug in footer on mobile devices... MARWEB-130 add E2 and EU logo MARWEB-138 max-zoom and extent limitation

--- a/src/main/webapp/prototype/css/balticweb.css
+++ b/src/main/webapp/prototype/css/balticweb.css
@@ -1,28 +1,37 @@
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 100px;
+}
+/* Sticky footer styles
+-------------------------------------------------- */
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 100px;
+}
+
+.push {
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    width: 100%;
+}
 
 .panel-title {
     font-size: 12px;
 }
 
 .navbar {
-
     margin: 0;
 }
-
-
-.footer, .push  {
-    position: absolute;
-    bottom: 0;
-    height: 60px;
-    background-color: #f5f5f5;
-    width:100%;
-}
-
-
-#footercontainer{
-    color: #eee;
-}
-
 
 .dialog-close-btn {
     float: right;
@@ -36,7 +45,6 @@
     cursor: pointer;
     text-decoration: underline;
 }
-
 
 /** Map and sidebar **/
 /*
@@ -91,9 +99,8 @@
 }*/
 .maritimeweb-sidebar {
     padding: 0px;
-    overflow-y: scroll;
+   /* overflow-y: scroll;*/
 }
-
 
 .sidebar-panel {
     padding: 10px 5px;
@@ -107,15 +114,38 @@
 /** Maps **/
 
 .map {
-    padding: 0px;
-    margin: 0px;
+    padding: 5px;
+    margin-right: 0px;
     height: 600px;
+
+}
+@media (min-width: 300px) {
+    .map {
+        height: 475px;
+    }
 }
 
+@media (min-width: 400px) {
+    .map {
+        height: 500px;
+    }
+}
+@media (min-width: 600px) {
+    .map {
+        height: 600px;
+    }
+}
+@media (min-width: 1000px) {
+    .map {
+        height: 700px;
+    }
+}
+
+
 .map-current-pos-btn {
-    left: 8px;
-    top: 70px;
-    font-size: 12px;
+    left: 12px;
+    top: 80px;
+    font-size: 1.5em;
     position: absolute;
     z-index: 100;
     margin: 0;
@@ -123,12 +153,34 @@
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.4);
     opacity: 0.8;
+
+}
+
+.map-current-pos-btn:hover {
+    cursor: hand;
+    background-color: rgba(255, 255, 255, 0.8);
+
+}
+.map-current-pos-btn span {
+    color: white;
+    border-radius: 4px;
+    padding: 4px;
+    background-color: rgba(0, 60, 136, 0.5);
+    list-style-type: none;
+}
+
+.map-current-pos-btn:hover span {
+    cursor: pointer;
+    color: white;
+    border-radius: 4px;
+    padding: 4px;
+    background-color: rgba(0, 60, 136, 0.9);
 }
 
 .map-current-pos-orientation-btn {
-    left: 8px;
+    left: 12px;
     top: 100px;
-    font-size: 12px;
+    font-size: 1.5em;
     position: absolute;
     z-index: 100;
     margin: 0;
@@ -136,6 +188,7 @@
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.4);
     opacity: 0.8;
+    cursor: hand;
 }
 
 .map-current-pos-orientation-btn span {
@@ -143,16 +196,10 @@
     border-radius: 4px;
     padding: 4px;
     background-color: rgba(0, 60, 136, 0.5);
-    list-style-type:none;
+    list-style-type: none;
 }
 
-.map-current-pos-btn span {
-    color: white;
-    border-radius: 4px;
-    padding: 4px;
-    background-color: rgba(0, 60, 136, 0.5);
-    list-style-type:none;
-}
+
 
 .map-scale-line {
     left: 50px;
@@ -192,7 +239,6 @@
 }
 
 /** Vessel list **/
-
 
 .vessel-login {
     margin: 10px 20px;
@@ -237,7 +283,7 @@
 /** NW-NM Message Details Dialog **/
 
 .message-details-item {
-    padding: 10px!important;
+    padding: 10px !important;
     font-size: 11px;
 }
 
@@ -261,7 +307,7 @@ ol.message-details-positions {
 }
 
 ol.message-details-positions li span {
-    color:#333;
+    color: #333;
 }
 
 .message-details-map {
@@ -290,18 +336,26 @@ ol.message-details-positions li span {
     right: 30px;
     z-index: 2000;
 }
+
+
+/*
+Making room for the beta ribbon banner
+*/
+.navbar-brand{
+    padding-left: 50px;
+}
 /*
 beta ribbon banner in pure css
 */
 
-body:after{
+body:after {
     content: "beta";
-    position: fixed;
+    position: absolute;
     width: 80px;
     height: 25px;
     background: red;
-    opacity: 80;
-    fill-opacity: 80;
+   /* opacity: 0.90;
+    fill-opacity: 0.90;*/
     top: 7px;
     left: -20px;
     text-align: center;
@@ -311,8 +365,8 @@ body:after{
     font-weight: bold;
     color: #fff;
     line-height: 27px;
-    -ms-transform:rotate(-45deg);
-    -webkit-transform:rotate(-45deg);
-    transform:rotate(-45deg);
-    z-index:9999;
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    z-index: 9999;
 }
